<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/adoptBackground"
    tools:layout_editor_absoluteX="2dp"
    tools:layout_editor_absoluteY="23dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:src="@drawable/slikaa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/buttons"
            android:fontFamily="@font/alata"
            android:text="@string/back"
            android:textColor="@color/adoptBackground"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/EditText1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="17dp"
            android:background="@color/buttons2"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/EditText2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="17dp"
            android:background="@color/buttons2"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/EditText1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="358dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alata"
        android:text="@string/adoptText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="105dp"
            android:fontFamily="@font/alata"
            android:text="@string/color"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/alata"
            android:text="@string/breed"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/alata"
            android:text="@string/height"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/EditText3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="17dp"
            android:background="@color/buttons2"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/EditText2" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="70dp"
            android:backgroundTint="@color/buttons"
            android:fontFamily="@font/alata"
            android:text="@string/next"
            android:textColor="@color/adoptBackground"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>