<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/adoptBackground"
    tools:context=".GiftFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/slikaa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/btnBack2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/buttons"
            android:fontFamily="@font/alata"
            android:text="@string/back"
            android:textColor="@color/adoptBackground"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="24dp"
            android:background="@color/buttons2"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/EditTextBreed"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:background="@color/buttons2"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/EditTextName" />

        <EditText
            android:id="@+id/EditTextHeight"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:background="@color/buttons2"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/EditTextBreed" />

        <EditText
            android:id="@+id/EditTextColor"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:background="@color/buttons2"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/EditTextHeight" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="88dp"
            android:fontFamily="@font/alata"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/alata"
            android:text="@string/breed"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/alata"
            android:text="@string/height"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/alata"
            android:text="@string/color"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="345dp"
            android:layout_height="71dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/alata"
            android:text="@string/giftText"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="70dp"
            android:backgroundTint="@color/buttons"
            android:fontFamily="@font/alata"
            android:text="@string/next"
            android:textColor="@color/adoptBackground"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>